src/objects/fziiss__Invoice_Item_Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>fziiss__AccountId__c</fullName>
        <externalId>true</externalId>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__AccountingCode__c</fullName>
        <label>Accounting Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__AdjustmentDate__c</fullName>
        <label>Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fziiss__AdjustmentNumber__c</fullName>
        <label>Adjustment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fziiss__Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Invoice Item Adjustments</relationshipLabel>
        <relationshipName>Invoice_Item_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fziiss__CancelledById__c</fullName>
        <label>Cancelled By ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__CancelledDate__c</fullName>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fziiss__Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__CreatedById__c</fullName>
        <label>Created By ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fziiss__CustomerName__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__CustomerNumber__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__DeferredRevenueAccount__c</fullName>
        <label>Deferred Revenue Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__Exclude_From_Batchable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Batchable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fziiss__InvoiceId__c</fullName>
        <label>Invoice ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__InvoiceItemName__c</fullName>
        <label>Invoice Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Invoice Item Adjustments</relationshipLabel>
        <relationshipName>Invoice_Item_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fziiss__ReasonCode__c</fullName>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__RecognizedRevenueAccount__c</fullName>
        <label>Recognized Revenue Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__ReferenceId__c</fullName>
        <label>Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__ServiceEndDate__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fziiss__ServiceStartDate__c</fullName>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fziiss__SourceId__c</fullName>
        <externalId>true</externalId>
        <label>Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__SourceType__c</fullName>
        <label>Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__Source_Invoice_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Invoice Item</label>
        <referenceTo>fziiss__Invoice_Item__c</referenceTo>
        <relationshipLabel>Invoice Item Adjustments</relationshipLabel>
        <relationshipName>Invoice_Item_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fziiss__Source_Taxation_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Taxation Item</label>
        <referenceTo>fziiss__Taxation_Item__c</referenceTo>
        <relationshipLabel>Invoice Item Adjustments</relationshipLabel>
        <relationshipName>Invoice_Item_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fziiss__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__TransferredToAccounting__c</fullName>
        <label>Transferred To Accounting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__UpdatedById__c</fullName>
        <label>Updated By ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fziiss__UpdatedDate__c</fullName>
        <label>Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fziiss__Zuora_ID__c</fullName>
        <externalId>true</externalId>
        <label>Zuora ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invoice Item Adjustment</label>
    <nameField>
        <label>Invoice Item Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Item Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>